Fix mobile layout issue on Elle Marchent

--- a/front/style/_content.scss
+++ b/front/style/_content.scss
@@ -938,7 +938,6 @@
             width: 32%;
             height: 300px;
             list-style: none;
-            border: 1px solid $gray--light;
             margin-bottom: 20px;
             box-sizing: border-box;
             background-size: 200%;
@@ -992,6 +991,52 @@
                 &:after {
                     content: none;
                 }
+            }
+        }
+    }
+
+    &__learn {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        padding: 0;
+
+        li {
+            width: 32%;
+            list-style: none;
+            margin-bottom: 20px;
+            box-sizing: border-box;
+            position: relative;
+
+            .videos {
+                @include gradient-container;
+                height: 300px;
+                background-size: 200%;
+                background-position: center 30%;
+                background-repeat: no-repeat;
+
+                &:before {
+                    content: $play-icon;
+                    z-index: 1;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    height: 100%;
+                    position: relative;
+                }
+
+                &:after {
+                    @include classic-gradient($filter);
+                }
+            }
+
+            > a {
+                height: 100%;
+                width: 100%;
+                position: absolute;
+                top: 0;
+                z-index: 2;
+                border: 0;
             }
         }
     }
@@ -1066,16 +1111,22 @@
         }
     }
 
-    &__videos li {
+    &__videos li,
+    &__learn li {
         transition: all 0.2s;
 
-        &:hover {
+        .videos {
+          transition: all 0.2s;
+        }
+
+        &:hover .videos {
             background-size: 220%;
         }
     }
 
     @media (max-width: $tablet) {
-        &__videos {
+        &__videos,
+        &__learn {
             li {
                 width: 48%;
             }
@@ -1094,7 +1145,8 @@
 
     @media (max-width: $mobile) {
         &__photos,
-        &__videos {
+        &__videos,
+        &__learn {
             li {
                 width: 100%;
             }
